// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section /> it renders a dark Section 1`] = `
.c0 {
  padding: 3.2rem 0;
  background-color: #e4e8ef;
  color: #3e486e;
}

@media (max-width:600px) {
  .c0 {
    padding: 2.4rem 0;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    dark
     
  </div>
</div>
`;

exports[`<Section /> it renders a default Section 1`] = `
.c0 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

@media (max-width:600px) {
  .c0 {
    padding: 2.4rem 0;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    default
     
  </div>
</div>
`;

exports[`<Section /> it renders a light Section 1`] = `
.c0 {
  padding: 3.2rem 0;
  background-color: #f2f5fa;
  color: #3e486e;
}

@media (max-width:600px) {
  .c0 {
    padding: 2.4rem 0;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    light
     
  </div>
</div>
`;

exports[`<Section /> it renders a white Section 1`] = `
.c0 {
  padding: 3.2rem 0;
  background-color: #fff;
  color: #3e486e;
}

@media (max-width:600px) {
  .c0 {
    padding: 2.4rem 0;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    white
     
  </div>
</div>
`;

exports[`<Section /> renders large decorated section 1`] = `
.c0 {
  position: relative;
  margin: 6rem 0;
  padding: 6rem 0;
  min-height: 10rem;
  color: #3e486e;
}

.c1 {
  position: absolute;
  top: 0;
  right: 30%;
  bottom: 0;
  left: 0;
  z-index: -1;
  display: block;
  background-color: #e4e8ef;
  border-radius: 0 10rem 10rem 0;
  content: "";
}

.c2 {
  position: relative;
  z-index: 0;
}

@media (max-width:600px) {
  .c0 {
    margin: 3.2rem 0 4rem;
    padding: 3.2rem 0 4rem;
  }
}

@media (max-width:600px) {
  .c1 {
    right: 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      A decorated dark section
    </div>
  </div>
</div>
`;

exports[`<Section /> renders with correct decoration 1`] = `
.c0 {
  position: relative;
  margin: 5rem 0;
  padding: 3.2rem 0;
  min-height: 10rem;
  color: #3e486e;
}

.c1 {
  position: absolute;
  top: 0;
  right: 30%;
  bottom: 0;
  left: 0;
  z-index: -1;
  display: block;
  background-color: #e4e8ef;
  border-radius: 0 10rem 10rem 0;
  content: "";
}

.c2 {
  position: relative;
  z-index: 0;
}

@media (max-width:600px) {
  .c1 {
    right: 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      A decorated dark section
    </div>
  </div>
</div>
`;
